# python-devcontainer-poetry

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
dockerfiles/: Dockerfile.dev  Dockerfile.prod  Dockerfile.prod.bak1
my-folder/: README.md  pyproject.toml  run.py
my-folder/src/: __main__.py
my-folder/src/main/: __init__.py  module3.py
my-folder/src/package2/: module2.py
mypackages/: .dockerignore  README.md  entrypoint.py  pyproject.toml
mypackages/src/: __main__.py
mypackages/src/package1/: __init__.py  module1.py
mypackages/src/package2/: __init__.py
mypackages/src/package4/: main.py
mypackages/src/package4/submodule4/: __init__.py  submodule4.py
mypackages/src/shopping_cart/: __init__.py  item_database.py
mypackages/src/utils/: __init__.py  read_toml.py
mypackages/tests/package1/: test_module1.py
mypackages/tests/shopping_cart/: test_shopping_cart.py  test_shopping_cart2.py
