[tool.poetry]
name = "mypackages"
version = "1.0.0"
description = ""
authors = ["James Ee <james.ee.sg@gmail.com>"]
readme = "README.md"
packages = [{include = "cli", from = "src"}, 
            {include = "package1", from = "src"}, 
            {include = "package2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mycli = "cli:main"